# stock-tracker

./: .gitignore  Cargo.toml  README.md  TODO.md  run.sh  sp500.txt
examples/: fetch.rs
scripts/: bench.sh  profile.sh  run.sh
src/: lib.rs  main.rs  messages.rs  print.rs  stocks.rs  ticker.rs  transform.rs  util.rs  yfetch.rs
