[package]
name = "rust-stock-tracker"
version = "0.1.0"
edition = "2018"

[lib]
name = "rust_stock_tracker_lib"
path = "src/lib.rs"

[[bin]]
name = "rust-stock-tracker"
path = "src/main.rs"

# [[bin]]
# name = "rust_crypto_tracker"
# path = "src/bin/crypto.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "2.3.0"
chrono = "0.4.19"
clap = "2.33.3"
tokio = {version = "1.12.0", features = ["full"]}
yahoo_finance_api = "1.2.2"
